tdf#93949 ensure memory stream is properly flushed

Change-Id: I6d6a926f5d3fd62dd3b7b78a5721f6483b3b4ee7
(cherry picked from commit c6b11cf681f8e8d131031ea7e5d19c4b6473503a)
Reviewed-on: https://gerrit.libreoffice.org/20842
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>
(cherry picked from commit a0a35440453102d215456e3e2f16b4ee207b16de)